Closed
Bug 784550
Opened 14 years ago
Closed 14 years ago
2x slowdown on emscripten memops benchmark from bug 775323
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla17
People
(Reporter: azakai, Assigned: luke)
References
Details
(Whiteboard: [js:p1])
Attachments
(2 files)
|
68.59 KB,
application/javascript
|
Details | |
|
2.68 KB,
patch
|
jorendorff
:
review+
|
Details | Diff | Splinter Review |
The attached benchmark regressed to taking twice as long when bug 775323 landed. (We actually have this on awfy but I guess it wasn't noticed, and it came in through a merge from m-c which perhaps devs look at less.)
Specifically the revision that causes the regression is
http://hg.mozilla.org/mozilla-central/rev/48cfc16cac71
changeset: 102511:48cfc16cac71
user: Luke Wagner <luke@mozilla.com>
date: Mon Jul 30 11:38:53 2012 -0700
summary: Bug 775323 - build Bindings after, not during, parsing (r=ejpbruel)
| Assignee | ||
Comment 1•14 years ago
|
||
The root problem seems to be a function incorrectly getting marked as having its "bindings accessed dynamically" which causes every access to a local variable to use the slower aliased path.
The cause of this is actually pre-existing: there is a function of the form:
function a(a) { a = ... }
and the parser incorrectly calls setBindingsAccessedDynamically thinking that the assignment to 'a' is an assignment to the function name.
What my patch changed (fixed) was how bindingsAccessedDynamically propagates. Thus, the incorrect deoptimization gets propagated up into the big function where we spend 99% of the time.
Updated•14 years ago
|
Whiteboard: [js:p1]
| Assignee | ||
Comment 2•14 years ago
|
||
This fix puts the heavyweightness-setting where it should have been put in the first place (where we already set heavyweightness).
This should avoid unnecessarily deoptimizing any function of the forms:
function f(f) {}
function f() { var f }
This patch passes shell tests which I verified do test setting the callee.
| Assignee | ||
Comment 3•14 years ago
|
||
Nice find Alon, thanks for tracking it down!
| Reporter | ||
Comment 4•14 years ago
|
||
Thank you for the quick turnaround! :)
Comment 5•14 years ago
|
||
Comment on attachment 654044 [details] [diff] [review]
fix
Review of attachment 654044 [details] [diff] [review]:
-----------------------------------------------------------------
Faster, and nicer code, too.
It's still silly to be able to hurt perf by doing such a minor, silly thing. I hope we can make this nicer in the future. If the scope containing the function's own name is basically a let-scope with a const binding, that's something we're going to have to work on for ES6 anyway...
Attachment #654044 -
Flags: review?(jorendorff) → review+
| Assignee | ||
Comment 6•14 years ago
|
||
(In reply to Jason Orendorff [:jorendorff] from comment #5)
> I hope we can make this nicer in the future.
Agreed! I guess the closest decomposition for
(function f() { ... })
would be
(let (f) (f = function() { ... }))
which fails since we need 'f' to be const. However, since we're the emitter, it seems like we could just make the binding const and emit JSOP_SETLOCAL/JSOP_SETALIASEDVAR (which doesn't check const-ness) for the init.
| Assignee | ||
Comment 7•14 years ago
|
||
Comment 8•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
You need to log in
before you can comment on or make changes to this bug.
Description
•