Bug 784550 - Fix overly-conservative deoptimization of assignment to named lambda (r=jorendorff)